--- a/mystyle.css
+++ b/mystyle.css
@@ -92,7 +92,7 @@ footer {
     justify-content: center;
 }
 
-.container_g {
+/* .container_g {
     margin:auto;
 
     border-style: solid;
@@ -145,4 +145,4 @@ main > h3 {
 
 span.TA {
     color: #77c216;
-}
+} */
