--- a/mystyle.css
+++ b/mystyle.css
@@ -131,7 +131,7 @@ a[href="mailto:p2luo@ucsd.edu"]{
     font-size: 5vmin;
 } */
 
-/* main > h3 {
+main > h3 {
     color: #4b296f; 
 }
 
@@ -145,4 +145,4 @@ a[href="mailto:p2luo@ucsd.edu"]{
 
 span.TA {
     color: #77c216;
-} */
+}
